[tool.poetry]
name = "repl_python3_BetterBot2"
version = "0.1.0"
description = ""
authors = ["gilDoesBots <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
flask = "^2.0.1"
python-dotenv = "^0.18.0"
youtube-dl = "^2021.6.6"
googletrans = "^3.1.0a0"
PyNaCl="^1.4.0"
bs4 = "^0.0.1"
lxml="^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
